[package]
name = "zorp"
version = "0.1.0" 
edition = "2024"
authors = ["CodeTease"]
description = "High-performance ephemeral CI/CD dispatcher."

[dev-dependencies]
http-body-util = "0.1.2"
tower = { version = "0.4", features = ["util"] }
tokio-test = "0.4.4"
axum-test = "18.3.0"

[dependencies]
# Async Runtime & Web Server
tokio = { version = "1", features = ["full"] }
axum = "0.7"

# HTTP Client (New!) - For Webhook Callbacks
reqwest = { version = "0.12", features = ["json"] }

# Database (SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# AWS S3 (Optional Log Storage)
aws-config = { version = "1.5.3", optional = true }
aws-sdk-s3 = { version = "1.40.0", optional = true }
aws-smithy-http = { version = "0.60.9", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Docker Interface
bollard = "0.15"

# Utilities
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15.7"

[features]
s3_logging = ["aws-config", "aws-sdk-s3", "aws-smithy-http", "tokio-stream"]
